--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,7 +34,7 @@
   }
   
   .input {
-    @apply w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-md 
+    @apply w-full text-black px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-md 
     focus:outline-none focus:ring-2 focus:ring-primary-500 dark:bg-gray-800;
   }
 }
